--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "node-ts-tamplate",
   "version": "1.0.0",
   "main": "src/server.ts",
+  "type": "commonjs",
   "license": "MIT",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --loader ts-node/esm src/server.ts",
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -42,9 +43,9 @@
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.17",
     "@types/validator": "^13.12.2",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
-    "eslint": "^9.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "eslint": "^9.21.0",
     "prettier": "^3.3.3",
     "typescript": "^5.7.2"
   },
